--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #d2e8ff;
+  background-color: #e0e0e0;
 
   width: 100vw;
   
