--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,15 @@
   transition: 0.5s;
 }
 
+html {
+  background-color: rgba(0,0,0,1);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  scroll-behavior: smooth;
+  
+}
+
+body{
+  margin: 0;
+}
