--- a/src/Pages/register/Register.module.css
+++ b/src/Pages/register/Register.module.css
@@ -5,10 +5,9 @@
   right: 0;
   left: 0;
   bottom: -1px;
-  height: 100vh;
+  height: 100%;
   background: url('../../assets/background.jpg') no-repeat;
   background-size: cover;
-  overflow: hidden;
 }
 
 .divLogin{
