--- a/src/Pages/dashboard/Dashboard.module.css
+++ b/src/Pages/dashboard/Dashboard.module.css
@@ -1,36 +1,47 @@
-.card{
+.main{
   display: flex;
-  justify-content: left;
-
-  background-color: #00A5AA;
-  margin-top: 20px;
-  margin-bottom: 10px;
-  margin-right: 5px;
-
-  min-width: 150px;
-  height: 100px;
-  border-radius: 20px;
-
-  cursor: pointer;
-
-  text-decoration: none;
-
-}
-
-.card p{
-  color: #fff;
-  font-weight: 300;
-  font-size: 0.95em;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: auto;
-  text-align: left;
-  word-break: break-all;
+  max-width: 90vw;
+  padding: 20px;
 }
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  margin-top: 20px;
+  border-radius: 20px;
+  padding: 20px;
+  width: 90vw;
+  height: 400px;
+}
+
+.charts{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
- 
-  
 
+
+}
+@media only screen and (min-width: 530px) {
+  .container{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -40,15 +51,15 @@
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
-  
+ 
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 992px) {
-  
+
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (max-width: 1200px) {
- 
+
 }
