--- a/src/Pages/reports/Reports.module.css
+++ b/src/Pages/reports/Reports.module.css
@@ -16,11 +16,11 @@
   border-radius: 20px;
   padding: 20px;
   width: 90vw;
-  height: 100%;
+  height: auto;
 }
 
 .perfil{
-  width: 30%;
+  width: 20%;
   height: 30%;
   display: flex;
   flex-wrap: wrap;
@@ -31,7 +31,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 100%;
 }
 
 /* Extra small devices (phones, 600px and down) */
@@ -44,14 +43,16 @@
   
 
 }
-@media only screen and (min-width: 530px) {
-  .container{
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 50vw;
-  }
+
+.hiddenTable {
+  position: absolute;
+  left: -9999px;
+  top: -9999px;
+  display: flex;
+  flex-wrap: flex;
+  justify-content: center;
 }
+
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (max-width: 600px) {
